- Added navigation component for news list and detail - Added adapter for news list - Created Result object for data and error handling case

--- a/app/src/main/res/layout/rv_news_list_items.xml
+++ b/app/src/main/res/layout/rv_news_list_items.xml
@@ -25,8 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_small"
+        android:fontFamily="@font/robotoslab_regular"
         android:textColor="@android:color/white"
-
         android:layout_marginStart="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         app:layout_constraintBottom_toBottomOf="@+id/ivNews"
@@ -43,6 +43,7 @@
         android:layout_marginEnd="@dimen/margin_large"
         android:layout_marginBottom="@dimen/margin_small"
         android:maxLines="2"
+        android:fontFamily="@font/robotoslab_regular"
         tools:text="Boeing dedicates 100 million to victims of 737 max crashes"
         app:layout_constraintBottom_toTopOf="@+id/tvChannel"
         app:layout_constraintEnd_toEndOf="@+id/ivNews"
@@ -56,6 +57,7 @@
         android:layout_marginStart="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         tools:text="CNN"
+        android:fontFamily="@font/robotoslab_regular"
         android:textColor="@android:color/white"
         android:textSize="@dimen/text_small"
         app:layout_constraintBottom_toBottomOf="@+id/ivNews"
