--- a/app/src/main/res/layout/rv_news_list_items.xml
+++ b/app/src/main/res/layout/rv_news_list_items.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="newsItem"
+            type="com.cnx.newsfeed.api.NewsListModel" />
+    </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_margin="@dimen/margin_small"
     android:layout_height="250dp">
@@ -13,12 +21,24 @@
         android:layout_height="match_parent"
         android:scaleType="fitXY"
         android:src="@drawable/gradient"
-        android:background="@drawable/ic_dummy"
+        app:imageFromUrl="@{newsItem.urlToImage}"
         android:layout_margin="@dimen/margin_small"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+
+        <View
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:background="@drawable/gradient"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
 
     <TextView
         android:id="@+id/tvDate"
@@ -31,7 +51,9 @@
         android:layout_marginBottom="@dimen/margin_small"
         app:layout_constraintBottom_toBottomOf="@+id/ivNews"
         app:layout_constraintStart_toEndOf="@+id/tvChannel"
-        tools:text="2019-10-09" />
+        tools:text="2019-10-09"
+        android:text="@{newsItem.publishedAt}"
+        />
 
     <TextView
         android:id="@+id/textView"
@@ -43,6 +65,8 @@
         android:layout_marginEnd="@dimen/margin_large"
         android:layout_marginBottom="@dimen/margin_small"
         android:maxLines="2"
+        android:text="@{newsItem.title}"
+
         android:fontFamily="@font/robotoslab_regular"
         tools:text="Boeing dedicates 100 million to victims of 737 max crashes"
         app:layout_constraintBottom_toTopOf="@+id/tvChannel"
@@ -57,6 +81,8 @@
         android:layout_marginStart="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         tools:text="CNN"
+        android:text="@{newsItem.author}"
+
         android:fontFamily="@font/robotoslab_regular"
         android:textColor="@android:color/white"
         android:textSize="@dimen/text_small"
@@ -64,3 +90,5 @@
         app:layout_constraintStart_toStartOf="@+id/ivNews" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
