--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,12 +4,12 @@
     
     <dimen name="text_large">29sp</dimen>
     <dimen name="text_medium">20sp</dimen>
-    <dimen name="text_small">12sp</dimen>
-
+    <dimen name="text_xsmall">12sp</dimen>
+    <dimen name="text_small">14sp</dimen>
 
     <dimen name="margin_small">12dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_large">24dp</dimen>
-    <dimen name="margin_xlarge">64dp</dimen>
+    <dimen name="margin_xlarge">44dp</dimen>
     
 </resources>
