- Handling network state for showing progress bar while loading of data.

--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -17,6 +17,13 @@
             tools:listitem="@layout/rv_news_list_items"
             />
 
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/progressBar"/>
+
     </FrameLayout>
 
 </layout>
