--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorGray">#f2f2f2</color>
     <color name="colorDarkGray">#bababa</color>
     <color name="colorTransparent">#00BABABA</color>
+    <color name="colorTranslucent">#4A000000</color>
 
 
 </resources>
