- Fixed layout for news detail fragment

--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -14,7 +14,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
-
     android:layout_height="match_parent">
 
     <ImageView
@@ -28,6 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
         app:srcCompat="@drawable/ic_dummy" />
 
     <View
@@ -72,12 +72,10 @@
         android:layout_height="wrap_content"
         android:text="@{newsDetail.publishedAt}"
         app:layout_constraintBottom_toTopOf="@+id/tvDescDetail"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="@dimen/margin_medium"
         android:textColor="@color/colorGray"
-
-        app:layout_constraintHorizontal_bias="0.908"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginEnd="@dimen/margin_large"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tvHeadLineDetail"
@@ -104,8 +102,9 @@
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_xlarge"
         android:background="@drawable/bg_circle_translucent"
-        android:layout_margin="@dimen/margin_xsmall"
+        android:layout_marginStart="@dimen/margin_xsmall"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="@dimen/margin_small"
