- Fixed reloading of data for NewsList Fragment

--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -102,9 +102,8 @@
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_xlarge"
         android:background="@drawable/bg_circle_translucent"
-        android:layout_marginStart="@dimen/margin_xsmall"
+        android:layout_margin="@dimen/margin_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:padding="@dimen/margin_small"
