--- a/app/src/main/res/drawable/bg_circle_translucent.xml
+++ b/app/src/main/res/drawable/bg_circle_translucent.xml
@@ -9,7 +9,7 @@
             <corners android:radius="8dp"  />
 
             <solid android:color="@color/colorTranslucent"/>
-            <stroke android:width="1dp" android:color="@color/colorTranslucent" />
+            <stroke android:color="@color/colorTranslucent" />
 
         </shape>
 
