Update package name and follow correct code style.

--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="newsDetail"
-            type="com.cnx.newsfeed.api.NewsListModel" />
+            type="com.kanchanpal.newsfeed.api.NewsListModel" />
     </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
