--- a/app/src/main/res/layout/rv_news_list_items.xml
+++ b/app/src/main/res/layout/rv_news_list_items.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="newsItem"
-            type="com.cnx.newsfeed.api.NewsListModel" />
+            type="com.kanchanpal.newsfeed.api.NewsListModel" />
 
         <variable
             name="clickListener"
